--- a/views/category.html
+++ b/views/category.html
@@ -1,12 +1,45 @@
 {% extends "layout.html" %}
 
-{% block content %}
-  <div class="row">
-    <div class="col-sm-6">
-      <h1>All Categories</h1>
-    </div>
-    <div class="col-sm-6">
-      <h1>Data:</h1>
-    </div>
+
+{% block categoryName %}
+  <h1>Category: {{ categoryname }}</h1>
+{% endblock %}
+
+
+{% block left %}
+  <form class="well" method="POST" action="/categories/{{category.id}}/products">
+    <p>
+      <input type="text" name="product" class="form-control" placeholder="add a product...">
+    </p>
+    <p>
+      <button class="btn btn-primary">
+        <span class="glyphicon glyphicon-save"></span>
+        Save
+      </button>
+    </p>
+  </form>
+  <div>
+    <ul class="list-group">
+    {% for product in products %}
+      <li class="list-group-item">
+      {{product.name}}
+      <div class="pull-right">
+        <form method="POST" action="/categories/{{category.id}}/products/{{product.id}}?_method=DELETE">
+        <button class="btn btn-warning">
+          <span class="glyphicon glyphicon-trash"></span>
+          Delete
+        </button>
+        </form>
+      </div>
+      <br style="clear:both">
+      </li>
+    {% endfor %}
+    </ul>
   </div>
+{% endblock %}
+
+
+{% block right %}
+  <h2>Data:</h2>
+  <pre>{{ products | dump(2) }}</pre>
 {% endblock %}
